Metadata/objects/Batch_Jobs__c.object
<CustomObject>
    <description>This holds the records for batch process of MRR and Renew Orders</description>
    <fields>
        <fullName>Completed_Date_and_Time__c</fullName>
        <label>Completed Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Exception_Log__c</fullName>
        <label>Exception Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_Date_and_Time__c</fullName>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Started</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed with errors</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>MRR Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Auto Renewals</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SteelBrick Batch Jobs</label>
    <listViews>
        <fullName>All_Batch_Jobs</fullName>
        <columns>NAME</columns>
        <columns>Type__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Date_and_Time__c</columns>
        <columns>Completed_Date_and_Time__c</columns>
        <columns>Exception_Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Batch Jobs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice IT Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>